[package]
name = "rpn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# chrono = { version = "0.4.28", features = ["serde"] }
crossterm = { version = "0.27.0", features = ["event-stream"] }
futures = "0.3.28"
tokio = { version = "1.32.0", features = ["full"] }
# tui = { version = "0.19.0", default-features = false, features = ['crossterm', 'serde'] }
tui = "0.19.0"
tui-textarea = "0.2.0"
